k8/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: <AWS_ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/backend-repo:latest
          ports:
            - containerPort: 8080
