k8/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 975050038744.dkr.ecr.ap-south-1.amazonaws.com/frontend-repo:latest
          ports:
            - containerPort: 80
